--- a/src/base.css
+++ b/src/base.css
@@ -6,4 +6,23 @@
   .container {
     @apply h-screen overflow-hidden relative;
   }
+
+  .loading {
+    @apply absolute top-0 left-0 z-50 bg-slate-900 flex items-center justify-center;
+  }
+
+  .loading-box {
+    @apply w-[240px] h-[240px] flex flex-col items-center justify-between;
+  }
+
+  .loading-icon {
+    @apply w-[160px] h-[160px];
+  }
+
+  .loading-text {
+    @apply text-white text-[32px];
+  }
+}
+
+@layer utilities {
 }
