--- a/src/base.css
+++ b/src/base.css
@@ -3,26 +3,29 @@
 @tailwind utilities;
 
 @layer components {
-  .container {
-    @apply h-screen overflow-hidden relative;
-  }
+    .container {
+        @apply w-screen h-screen overflow-hidden relative;
+    }
 
-  .loading {
-    @apply absolute top-0 left-0 z-50 bg-slate-900 flex items-center justify-center;
-  }
+    .pages {
+        @apply w-screen h-screen overflow-hidden fixed top-0 left-0;
+    }
 
-  .loading-box {
-    @apply w-[240px] h-[240px] flex flex-col items-center justify-between;
-  }
+    .loading {
+        @apply absolute top-0 left-0 z-50 bg-slate-900 flex items-center justify-center;
+    }
 
-  .loading-icon {
-    @apply w-[160px] h-[160px];
-  }
+    .loading-box {
+        @apply w-[240px] h-[240px] flex flex-col items-center justify-between;
+    }
 
-  .loading-text {
-    @apply text-white text-[32px];
-  }
+    .loading-icon {
+        @apply w-[160px] h-[160px];
+    }
+
+    .loading-text {
+        @apply text-white text-[32px];
+    }
 }
 
-@layer utilities {
-}
+@layer utilities {}
