--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -1,10 +1,18 @@
 /* @tailwind base; */
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	@keyframes fadeOut {
+		from {
+			opacity: 1;
+		}
+		to {
+			opacity: 0;
+		}
+	}
+
+	.fadeOut {
+		animation: .5s fadeOut forwards;
+	}
+}
